--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-<p> This is still under construction </p>
-
-<font size = "2"> Possibly for a long time </font>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Millzy R - The Github equivalent of a house renovation</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+<body>
+<div class="jumbotron text-center">
+  <h1>R. Mills</h1>
+  <p>I work in the DairyNZ Economics team using R, Javascript, Python & reluctantly C++ to do fun stuff</p>
+</div>
+<p>
+  Like a classic building renovation. This website is still under construction. And like a typical building renovation, it has no completion ETA. In some ways, I am the
+  ultimate DIY guy... except that using a hammer I have only successfully crushed fingers and nearly earnt my accidental arsonist certification.  
+  </p>
